// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialCardComments test renders correctly - no comments 1`] = `
<div
  className="Social_comments_input_panel"
>
  <img
    alt=""
    className="Social_comments_image"
    src="https://scontent.ftlv4-1.fna.fbcdn.net/v/t1.0-1/p80x80/n.jpg"
  />
  <input
    className="Social_comments_input"
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Write a comment..."
    type="text"
    value=""
  />
</div>
`;

exports[`SocialCardComments test renders correctly - with comments 1`] = `
Array [
  <div
    className="Social_comments_input_panel"
>
    <img
        alt=""
        className="Social_comments_image"
        src="https://scontent.ftlv4-1.fna.fbcdn.net/v/t1.0-1/p80x80/n.jpg"
    />
    <input
        className="Social_comments_input"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Write a comment..."
        type="text"
        value=""
    />
</div>,
  <div
    className="Comment_panel"
>
    <img
        alt=""
        className="Social_comments_image"
        src="https://scontent.ftlv4-1.fna.fbcdn.net/v/t1.0-1/p80x80/n.jpg"
    />
    <div
        className="Comment_comment_panel"
    >
        <a
            className="Comment_profile"
            href="#"
        >
            Vevo
        </a>
        <span
            className="Comment_comment"
        >
            Hi
        </span>
    </div>
</div>,
]
`;
